unpackaged/main/default/objects/Account/fields/Active_Groups__c.field-meta.xml
<CustomField>
    <fullName>Active_Groups__c</fullName>
    <label>#Active Groups</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>