unpackaged/main/default/objects/Account/fields/Agency_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Type_Name__c</fullName>
    <label>Agency Type Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMPLOYER GROUP ENROLLMENT</fullName>
            </value>
            <value>
                <fullName>PRE-CERTIFICATION</fullName>
            </value>
            <value>
                <fullName>UTILIZATION REVIEW</fullName>
            </value>
            <value>
                <fullName>ROI PAYER</fullName>
            </value>
            <value>
                <fullName>INVALID OR NOTFOUND</fullName>
            </value>
            <value>
                <fullName>NOT SPECIFIED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>