unpackaged/main/default/objects/Account/fields/Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Agent_ID__c</fullName>
    <description>Used in Purchaser Group post-processing. Meant to look up Agents (Contacts) by scanning all the Agent_ID__c values on the AccountContactRelation records, and getting the Agent(Contact) whose Agent_ID__c is a match</description>
    <externalId>true</externalId>
    <label>Agent ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>