unpackaged/main/default/objects/Account/fields/Anticipated_Future_Bid_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Future_Bid_Date__c</fullName>
    <label>Anticipated Future Bid Date</label>
    <type>Date</type>
</CustomField>