unpackaged/main/default/objects/Account/fields/Benefit_Year__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Year__c</fullName>
    <label>Benefit Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calender Year</fullName>
            </value>
            <value>
                <fullName>Contract Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>