unpackaged/main/default/objects/Account/fields/Contracts_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Quoted__c</fullName>
    <description>This is a numeric value coming from HL</description>
    <label>Contracts Quoted</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>