unpackaged/main/default/objects/Account/fields/Corp_ID__c.field-meta.xml
<CustomField>
    <fullName>Corp_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>for Snowflake integration of purchaser data</description>
    <externalId>true</externalId>
    <label>Corp ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>