unpackaged/main/default/objects/Account/fields/Current_Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Current_Member_Count__c</fullName>
    <label>Current Member Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>