unpackaged/main/default/objects/Account/fields/Current_Member_Count_Corp__c.field-meta.xml
<CustomField>
    <fullName>Current_Member_Count_Corp__c</fullName>
    <label>Current Member Count - Corp</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>