unpackaged/main/default/objects/Account/fields/Doing_Business_As__c.field-meta.xml
<CustomField>
    <fullName>Doing_Business_As__c</fullName>
    <description>DBA(Doing Business As) field to differentiate between the legal business name and the &quot;friendly&quot; name that Quartz uses regularly</description>
    <label>Doing Business As</label>
    <length>150</length>
    <type>Text</type>
</CustomField>