unpackaged/main/default/objects/Account/fields/Earliest_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Enrollment_Date__c</fullName>
    <description>Date of first enrollment</description>
    <label>Earliest Enrollment Date</label>
    <summarizedField>MemberPlan.EffectiveFrom</summarizedField>
    <summaryForeignKey>MemberPlan.MemberId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>