unpackaged/main/default/objects/Account/fields/Effective_Date_Provision__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_Provision__c</fullName>
    <label>Effective Date Provision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>