unpackaged/main/default/objects/Account/fields/Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Group_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Group ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>