unpackaged/main/default/objects/Account/fields/Health_Link_Contact__c.field-meta.xml
<CustomField>
    <fullName>Health_Link_Contact__c</fullName>
    <label>Health Link Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>