unpackaged/main/default/objects/Account/fields/Individual_Commercial_MGA_Name__c.field-meta.xml
<CustomField>
    <fullName>Individual_Commercial_MGA_Name__c</fullName>
    <description>only display when LOB = Individual</description>
    <label>Individual Commercial MGA Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Tier 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>