unpackaged/main/default/objects/Account/fields/Integration_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_Source_Id__c</fullName>
    <externalId>true</externalId>
    <label>Integration Source Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>