unpackaged/main/default/objects/Account/fields/Is_Customer__c.field-meta.xml
<CustomField>
    <fullName>Is_Customer__c</fullName>
    <label>Is Customer?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>