unpackaged/main/default/objects/Account/fields/Lead_Conversion_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Lead_Conversion_Birthdate__c</fullName>
    <description>Custom field to store birthdate during the lead conversion, since it is not supported in the standard mapping</description>
    <label>Lead Conversion - Birthdate</label>
    <type>Date</type>
</CustomField>