unpackaged/main/default/objects/Account/fields/Market_segment__c.field-meta.xml
<CustomField>
    <fullName>Market_segment__c</fullName>
    <label>Market segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Market_Segment</valueSetName>
    </valueSet>
</CustomField>