unpackaged/main/default/objects/Account/fields/Masked_Patient_ID__c.field-meta.xml
<CustomField>
    <fullName>Masked_Patient_ID__c</fullName>
    <externalId>true</externalId>
    <label>Masked Patient ID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>