unpackaged/main/default/objects/Account/fields/Medicare_Advantage_MGA_Name__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Advantage_MGA_Name__c</fullName>
    <description>Only Display when LOB contains Medicare</description>
    <label>Medicare Advantage MGA Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 1.5</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>