unpackaged/main/default/objects/Account/fields/Medicare_Advantages_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Advantages_Eligibility__c</fullName>
    <description>Mapped from Lead Conversion</description>
    <label>Medicare Advantages Eligibility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Part A</fullName>
            </value>
            <value>
                <fullName>Part B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>