unpackaged/main/default/objects/Account/fields/Medicare_ID__c.field-meta.xml
<CustomField>
    <fullName>Medicare_ID__c</fullName>
    <externalId>true</externalId>
    <label>Medicare ID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>