unpackaged/main/default/objects/Account/fields/Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Member_Count__c</fullName>
    <label>Member Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>