unpackaged/main/default/objects/Account/fields/Member_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Member_Group_ID__c</fullName>
    <label>Member Group ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>