unpackaged/main/default/objects/Account/fields/Member_MRN__c.field-meta.xml
<CustomField>
    <fullName>Member_MRN__c</fullName>
    <label>Member MRN</label>
    <length>310</length>
    <type>LongTextArea</type>
</CustomField>