unpackaged/main/default/objects/Account/fields/Months_to_Begin_Renewal_Discussions__c.field-meta.xml
<CustomField>
    <fullName>Months_to_Begin_Renewal_Discussions__c</fullName>
    <label>Months to Begin Renewal Discussions</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>