unpackaged/main/default/objects/Account/fields/Multi_year_Cap__c.field-meta.xml
<CustomField>
    <fullName>Multi_year_Cap__c</fullName>
    <description>Used for Commercial groups</description>
    <label>Multi-year Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>