unpackaged/main/default/objects/Account/fields/Number_of_Enrollees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Enrollees__c</fullName>
    <label>Number of Enrollees</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>