unpackaged/main/default/objects/Account/fields/Original_Corp_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Corp_ID__c</fullName>
    <externalId>true</externalId>
    <label>Original Corp ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>