unpackaged/main/default/objects/Account/fields/Original_Enrollment_Date_Set__c.field-meta.xml
<CustomField>
    <fullName>Original_Enrollment_Date_Set__c</fullName>
    <formula>IF(ISNULL(Original_Enrollment_Date__pc ),FALSE,TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Enrollment Date Set?</label>
    <type>Checkbox</type>
</CustomField>