unpackaged/main/default/objects/Account/fields/Part_A_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Part_A_Start_Date__c</fullName>
    <description>Coming from Snowflake Integration</description>
    <label>Part A Start Date</label>
    <type>DateTime</type>
</CustomField>