unpackaged/main/default/objects/Account/fields/Part_B_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Part_B_Start_Date__c</fullName>
    <label>Part B Start Date</label>
    <type>DateTime</type>
</CustomField>