unpackaged/main/default/objects/Account/fields/Patient_ID__c.field-meta.xml
<CustomField>
    <fullName>Patient_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Patient ID</label>
    <length>54</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>