unpackaged/main/default/objects/Account/fields/Retiree_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Retiree_Coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retiree Coverage</label>
    <type>Checkbox</type>
</CustomField>