unpackaged/main/default/objects/Account/fields/Sales_Exec_UserID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Exec_UserID__c</fullName>
    <externalId>true</externalId>
    <label>Sales Exec UserID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>