unpackaged/main/default/objects/Account/fields/Sales_Rep_UserId__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_UserId__c</fullName>
    <label>Sales Rep UserId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>