unpackaged/main/default/objects/Account/fields/subscriber_Number__c.field-meta.xml
<CustomField>
    <fullName>subscriber_Number__c</fullName>
    <label>subscriber Number</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>