unpackaged/main/default/objects/Account/fields/Termination_Date_Provision__c.field-meta.xml
<CustomField>
    <fullName>Termination_Date_Provision__c</fullName>
    <label>Termination Date Provision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>