unpackaged/main/default/objects/Account/fields/Total_Member_Plans__c.field-meta.xml
<CustomField>
    <fullName>Total_Member_Plans__c</fullName>
    <label>Total Member Plans</label>
    <summaryForeignKey>MemberPlan.MemberId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>