unpackaged/main/default/objects/Account/fields/Waiting_period__c.field-meta.xml
<CustomField>
    <fullName>Waiting_period__c</fullName>
    <label>Waiting period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>