unpackaged/main/default/objects/Account/recordTypes/CareProgramSponsor.recordType-meta.xml
<RecordType>
    <fullName>CareProgramSponsor</fullName>
    <active>true</active>
    <description>Represents a Care Program Sponsor</description>
    <label>Care Program Sponsor</label>
</RecordType>