unpackaged/main/default/objects/Account/recordTypes/IndustriesPurchaser.recordType-meta.xml
<RecordType>
    <fullName>IndustriesPurchaser</fullName>
    <active>true</active>
    <description>Represents a Purchaser</description>
    <label>Purchaser</label>
</RecordType>