unpackaged/main/default/objects/Account/recordTypes/PersonAccount.recordType-meta.xml
<RecordType>
    <fullName>PersonAccount</fullName>
    <active>true</active>
    <label>PersonAccount</label>
</RecordType>